# JobSyncAI

./: .gitattributes  README.md  pyproject.toml  requirements.txt
Job Scraping/: job_scraping_linkedin.py
Jobsync/: package-lock.json  package.json
Jobsync/src/: App.jsx  ProtectedRoutes.jsx  index.css  theme.js
Jobsync/src/components/: Footer.jsx  FooterIcons.jsx  FooterLinks.jsx  Introduction.jsx  JobDetails.jsx  JobMatches.jsx  Nav.jsx  PricingContainer.jsx  QuestionForm.jsx  Topbar.jsx  UploadResume.jsx
Jobsync/src/context/: AuthContext.js
Jobsync/src/scenes/404/: index.jsx
Jobsync/src/scenes/Auth/: index.jsx
Jobsync/src/scenes/Contact/: index.css  index.jsx
Jobsync/src/scenes/Home/: index.jsx
Jobsync/src/scenes/pricing/: index.jsx
Jobsync/src/scenes/resume/: index.jsx
Model/: Resume_matching_JD.py  app.py  similarity_scoring.py
Model/templates/: batch_result.html  result.html
invoke api packages/: Invoke-API.ps1  Invoke-API_2.ps1  Invoke-API_3.ps1
json_file_formats/: JobSyncAI.json  job_data_scraped_format.json  jobfieldinput.json  location_geoid.json  resume__jd.json
